@@ -1,0 +1,3 @@
+module FcrepoAdmin::DatastreamsHelper
+  include FcrepoAdmin::Helpers::DatastreamsHelperBehavior
+end
