@@ -1,11 +1,0 @@
-<li class="nav-header">
-  <%= t("fcrepo_admin.object.nav.header") %>
-</li>
-<li>
-  <%= link_to_unless_current t("fcrepo_admin.object.nav.items.summary"), fcrepo_admin.object_path(object) %>
-</li>
-<% if object_is_auditable? %>
-<li>
-  <%= link_to_unless_current t("fcrepo_admin.object.nav.items.audit_trail"), fcrepo_admin.audit_trail_object_path(object) %>
-</li>
-<% end %>
