@@ -1,5 +1,0 @@
-<div class="well">
-  <ul class="nav nav-list">
-	<%= yield %>
-  </ul>
-</div>
